...
                android:paddingTop="@dimen/grid_padding_top">
                <TextView
                    android:id="@+id/transaction_header_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                android:layout_height="@dimen/section_header_height">
                <TextView
                    android:id="@+id/receipt_details_header_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/receipt_header_label"
                    android:layout_marginStart="@dimen/grid_margin_left"
                    android:layout_marginTop="@dimen/grid_margin_top"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView android:id="@+id/receipt_id_label"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
...
                              android:layout_marginStart="@dimen/grid_margin_left"
                              android:layout_marginTop="@dimen/grid_margin_top"
                              android:text="@string/journalId"
                              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                              app:layout_constraintLeft_toLeftOf="parent"
...
                              app:layout_constraintTop_toTopOf="parent"/>

                    <TextView android:id="@+id/receipt_id_value"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
...
                              app:layout_constraintTop_toTopOf="parent"/>

                    <TextView android:id="@+id/date_label"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
...
                              android:layout_marginStart="@dimen/grid_margin_left"
                              android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                              android:text="@string/createdOn"
                              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                              app:layout_constraintLeft_toLeftOf="parent"
...
                              app:layout_constraintTop_toBottomOf="@+id/receipt_id_value"/>

                    <TextView android:id="@+id/date_value"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
...
                    android:layout_height="match_parent">

                    <TextView android:id="@+id/client_id_label"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
...
                              android:layout_marginStart="@dimen/grid_margin_left"
                              android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                              android:text="@string/clientPaymentId"
                              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                              app:layout_constraintLeft_toLeftOf="parent"
                              app:layout_constraintStart_toStartOf="parent"/>

                    <TextView android:id="@+id/client_id_value"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
...
                    android:layout_height="match_parent">

                    <TextView android:id="@+id/charity_label"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
...
                              android:layout_marginStart="@dimen/grid_margin_left"
                              android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                              android:text="@string/charityName"
                              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                              app:layout_constraintLeft_toLeftOf="parent"
                              app:layout_constraintStart_toStartOf="parent"/>

                    <TextView android:id="@+id/charity_value"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
...
                    android:layout_height="match_parent">

                    <TextView android:id="@+id/check_number_label"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
...
                              android:layout_marginStart="@dimen/grid_margin_left"
                              android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                              android:text="@string/checkNumber"
                              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                              app:layout_constraintLeft_toLeftOf="parent"
                              app:layout_constraintStart_toStartOf="parent"/>

                    <TextView android:id="@+id/check_number_value"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
...
                    android:layout_height="match_parent">

                    <TextView android:id="@+id/website_label"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
...
                              android:layout_marginStart="@dimen/grid_margin_left"
                              android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                              android:text="@string/website"
                              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                              app:layout_constraintLeft_toLeftOf="parent"
                              app:layout_constraintStart_toStartOf="parent"/>

                    <TextView android:id="@+id/website_value"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/receipt_notes_information"
                android:background="@drawable/item_view_border"
                android:orientation="vertical"
...
                    android:layout_height="@dimen/section_header_height">
                    <TextView
                        android:id="@+id/receipt_notes_header_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/notes"
                        android:layout_marginStart="@dimen/grid_margin_left"
                        android:layout_marginTop="@dimen/grid_margin_top"
...
                </LinearLayout>

                <TextView android:id="@+id/notes_value"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
...
                    android:layout_height="@dimen/section_header_height">
                    <TextView
                        android:id="@+id/details_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/fee_details_header_text"
                        android:layout_marginStart="@dimen/grid_margin_left"
                        android:layout_marginTop="@dimen/grid_margin_top"
