<resources>
    <string name="app_name">receipt</string>
    <string name="title_activity_receipt_list">Transactions</string>
    <string name="title_activity_receipt_detail">Transaction Details</string>
    <string name="transaction_header_text">Transaction</string>
    <string name="details_header_text">Details</string>
    <string name="details_amount_label">Amount:</string>
    <string name="fee_label">Fee:</string>
    <string name="transfer_amount_label">Transfer Amount:</string>
...
    <string name="receipt_date_label">Date:</string>
    <string name="client_id_label">Client ID:</string>
    <string name="notes_label">Notes:</string>
    <string name="charity_label">Charity Name:</string>
    <string name="check_number_label">Check Number:</string>
    <string name="website_label">Website:</string>
    <string name="concat_string_view_format">%s %s</string>

    <string name="empty_transaction_information">Seems like, you don\'t have any Transactions,
        yet.
    </string>
    <string name="title_transfer_funds">Transfer Funds</string>
    <string name="font_icon_placeholder">\uE900</string>
    <string name="text_placeholder">Placeholder</string>

    <!-- entry types -->
    <string name="debit">\uE900</string>
    <string name="credit">\uE902</string>
    <string name="debit_sign">- %s</string>
    <string name="credit_sign">+ %s</string>

    <!--Generic fee types-->
    <string name="unknown_type">Unknown Transaction Type</string>
    <string name="annual_fee">Annual Fee</string>
    <string name="annual_fee_refund">Annual Fee Refund</string>
    <string name="customer_service_fee">Customer Service Fee</string>
    <string name="customer_service_fee_refund">Customer Service Fee Refund</string>
    <string name="expedited_shipping_fee">Expedited Shipping Fee</string>
    <string name="generic_fee_refund">Generic Fee Refund</string>
...
    <string name="bank_account_transfer_fee">Bank Account Return Fee</string>
    <string name="bank_account_transfer_return">Bank Account Return</string>
    <string name="bank_account_transfer_return_fee">Bank Account Return Fee</string>
    <string name="transfer_to_bank_account">Bank Account</string>

    <!--Card-specific types-->
    <string name="card_activation_fee">Card Activation Fee</string>
    <string name="card_activation_fee_waiver">Card Activation Fee Waiver</string>
    <string name="card_fee">Card Fee</string>
    <string name="manual_transfer_to_prepaid_card">Card Load</string>
    <string name="prepaid_card_balance_inquiry_fee">Balance Inquiry Fee</string>
    <string name="prepaid_card_cash_advance">Cash Advance</string>
    <string name="prepaid_card_disputed_charge_refund">Disputed Charge Refund</string>
...
    <string name="prepaid_card_pin_change_fee">PIN Change Fee</string>
    <string name="prepaid_card_refund">Refund</string>
    <string name="prepaid_card_replacement_fee">Card Replacement Fee</string>
    <string name="prepaid_card_sale">Transaction</string>
    <string name="prepaid_card_sale_reversal">Reversed Transaction</string>
    <string name="prepaid_card_unload">Card Unload</string>
    <string name="transfer_to_prepaid_card">Card Load</string>
    <!---->
    <!--Donation types-->
    <string name="donation">Donation</string>
    <string name="donation_fee">Donation Fee</string>
    <string name="donation_return">Donation Return</string>
    <!---->
...
    <!--User and program account types-->
    <string name="account_closure">Account Closure</string>
    <string name="account_closure_fee">Account Closure Fee</string>
    <string name="account_unload">Funds Unloaded</string>
    <string name="dormant_user_fee">Dormant User Account Fee</string>
    <string name="dormant_user_fee_refund">Dormant User Account Fee Refund</string>
    <string name="payment">Payment</string>
    <string name="payment_cancellation">Payment Cancellation</string>
    <string name="payment_reversal">Payment Reversal</string>
    <string name="payment_reversal_fee">Payment Reversal Fee</string>
    <string name="payment_return">Payment Return</string>
    <string name="transfer_to_program_account">Transfer to Program</string>
    <string name="transfer_to_user">Transfer to User</string>
...
