<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView android:id="@+id/transaction_type_icon"
        style="@style/ReceiptTypeIcon"
        android:layout_marginStart="@dimen/widget_default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/transaction_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder"
        style="@style/ReceiptTitle"
        app:layout_constraintEnd_toStartOf="@+id/transaction_amount"
        app:layout_constraintStart_toEndOf="@+id/transaction_type_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_date"
        style="@style/ReceiptDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/transaction_currency"
        app:layout_constraintStart_toEndOf="@+id/transaction_type_icon"
        app:layout_constraintTop_toBottomOf="@+id/transaction_title" />

    <TextView android:id="@+id/transaction_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
